--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.0",
   "description": "Minimalistic boilerplate to quick-start Node.js development in TypeScript.",
   "engines": {
-    "node": ">= 14.16 <15"
+    "node": "=16.3.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/jest": "~26.0.23",
     "@types/node": "~14.14.45",
     "@typescript-eslint/eslint-plugin": "~4.28.2",
@@ -21,7 +22,7 @@
     "typescript": "~4.3.5"
   },
   "scripts": {
-    "start": "node build/src/main.js",
+    "start": "npx ts-node src/main.ts",
     "clean": "rimraf coverage build tmp",
     "prebuild": "npm run lint",
     "build": "tsc -p tsconfig.release.json",
@@ -33,6 +34,7 @@
   "author": "Jakub Synowiec <github@jakubsynowiec.info>",
   "license": "Apache-2.0",
   "dependencies": {
+    "express": "^4.17.3",
     "tslib": "~2.3.0"
   },
   "volta": {
