--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "typescript": "~4.3.5"
   },
   "scripts": {
-    "start": "npx ts-node src/main.ts",
+    "start:dev": "npx ts-node src/main.ts",
+    "start": "node build/src/main.js",
     "clean": "rimraf coverage build tmp",
     "prebuild": "npm run lint",
     "build": "tsc -p tsconfig.release.json",
@@ -36,8 +37,5 @@
   "dependencies": {
     "express": "^4.17.3",
     "tslib": "~2.3.0"
-  },
-  "volta": {
-    "node": "14.16.1"
   }
 }
