Add welcome page

--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -11,9 +11,9 @@ jobs:
       - run: npm run lint --if-present
       - run: npm test
       - run: npm run build --if-present
-      - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
+      - uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "tejodoro" #Must be unique in Heroku
+          heroku_app_name: "tejodoro"
           heroku_email: ${{secrets.HEROKU_EMAIL}}
           usedocker: true
