--- a/.github/workflows/webapp.yml
+++ b/.github/workflows/webapp.yml
@@ -3,14 +3,13 @@ name: Web App
 on: [push]
 
 jobs:
- 
   build:
-    runs-on: ubuntu-latest`
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: akhileshns/heroku-deploy@v3.4.6
         with:
-            working-directory: ./webapp
+            appdir: ./webapp/tejodoro-app
             heroku_api_key: ${{secrets.HEROKU_API_KEY}}
             heroku_app_name: "tejodoro-web-app"
-            heroku_email: "ronnyancorini@gmail.com"
+            heroku_email: ${{secrets.HEROKU_EMAIL}}
