--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -2,6 +2,10 @@ name: Node.js CI
 
 on: [push]
 
+defaults:
+  run:
+    working-directory: ./api
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -32,6 +36,7 @@ jobs:
       - name: Deploy
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
+          appdir: ./api/src
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "tejodoro"
           heroku_email: ${{secrets.HEROKU_EMAIL}}
