--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Deploy
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
-          appdir: ./api/src
+          appdir: ./api
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "tejodoro"
           heroku_email: ${{secrets.HEROKU_EMAIL}}
