--- a/.github/workflows/webapp.yml
+++ b/.github/workflows/webapp.yml
@@ -9,7 +9,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: akhileshns/heroku-deploy@v3.4.6
         with:
-            appdir: ./webapp/tejodoro-app
+            appdir: ./webapp
             heroku_api_key: ${{secrets.HEROKU_API_KEY}}
             heroku_app_name: "tejodoro-web-app"
             heroku_email: ${{secrets.HEROKU_EMAIL}}
