--- a/.github/workflows/webapp.yml
+++ b/.github/workflows/webapp.yml
@@ -2,8 +2,27 @@ name: Web App
 
 on: [push]
 
+defaults:
+  run:
+    working-directory: ./api
+
 jobs:
   build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Code checkout
+        uses: actions/checkout@v2
+
+      - name: Npm install
+        run: npm ci --no-audit
+
+      - name: Build
+        run: npm run build --if-present
+
+      - name: Test
+        run: npm test
+
+  deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
