--- a/api/.eslintrc.json
+++ b/api/.eslintrc.json
@@ -7,6 +7,7 @@
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "project": "tsconfig.json",
+    "tsconfigRootDir": "api/",
     "sourceType": "module"
   },
   "plugins": ["@typescript-eslint", "jest"],
