--- a/webapp/package.json
+++ b/webapp/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
     "react": "^18.0.0",
+    "react-countdown": "^2.3.2",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.0",
     "typescript": "^4.6.3",
@@ -39,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "serverless-s3-sync": "^3.0.0"
   }
 }
