--- a/tejodoro-api/serverless.yml
+++ b/tejodoro-api/serverless.yml
@@ -9,8 +9,8 @@ provider:
   region: eu-west-1
 
 functions:
-  hello:
-    handler: handler.hello
+  getPomodoro:
+    handler: handler.getPomodoro
     events:
       - httpApi:
           path: /
