--- a/tejodoro-api/package.json
+++ b/tejodoro-api/package.json
@@ -1,9 +1,15 @@
 {
   "name": "tejodoro-api",
-  "dependencies": {},
+  "scripts": {
+    "test": "jest",
+    "test:watch": "jest --watch"
+  },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.101",
+    "@types/jest": "^28.1.6",
+    "jest": "^28.1.3",
     "serverless-plugin-typescript": "^2.1.2",
+    "ts-jest": "^28.0.7",
     "typescript": "^4.7.4"
   }
 }
