--- a/.github/workflows/webapp.yml
+++ b/.github/workflows/webapp.yml
@@ -7,14 +7,17 @@ on:
 
 defaults:
   run:
-    working-directory: ./api
+    working-directory: ./webapp
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [16.x]
     steps:
       - name: Code checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Npm install
         run: npm ci --no-audit
@@ -27,11 +30,16 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
+    needs: build
+    strategy:
+      matrix:
+        node-version: [16.x]
+    if: endsWith(github.ref, '/main')
     steps:
-      - uses: actions/checkout@v2
-      - uses: akhileshns/heroku-deploy@v3.4.6
+      - uses: actions/checkout@v3
+      - name: serverless deploy
+        uses: serverless/github-action@v3.1
         with:
-            appdir: ./webapp
-            heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-            heroku_app_name: "tejodoro-web-app"
-            heroku_email: ${{secrets.HEROKU_EMAIL}}
+          args: deploy
+        env:
+          SERVERLESS_ACCESS_KEY: ${{ secrets.SERVERLESS_ACCESS_KEY }}
