--- a/.github/workflows/webapp.yml
+++ b/.github/workflows/webapp.yml
@@ -40,6 +40,7 @@ jobs:
       - name: serverless deploy
         uses: serverless/github-action@v3.1
         with:
-          args: deploy
+          args: -c "cd ./webapp && serverless deploy"
+          entrypoint: /bin/sh
         env:
           SERVERLESS_ACCESS_KEY: ${{ secrets.SERVERLESS_ACCESS_KEY }}
