--- a/tejodoro-api/package.json
+++ b/tejodoro-api/package.json
@@ -13,6 +13,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.154.0"
+    "@aws-sdk/client-dynamodb": "^3.154.0",
+    "@aws-sdk/util-dynamodb": "^3.200.0"
   }
 }
