--- a/tejodoro-api/package.json
+++ b/tejodoro-api/package.json
@@ -8,6 +8,7 @@
     "@types/aws-lambda": "^8.10.101",
     "@types/jest": "^28.1.6",
     "jest": "^28.1.3",
+    "prettier": "^2.7.1",
     "serverless-plugin-typescript": "^2.1.2",
     "ts-jest": "^28.0.7",
     "typescript": "^4.7.4"
