--- a/.github/workflows/api.yml
+++ b/.github/workflows/api.yml
@@ -12,6 +12,11 @@ defaults:
 jobs:
   build:
     runs-on: ubuntu-latest
+    services:
+      localstack:
+        image: localstack/localstack
+        ports:
+          - 4566:4566
     strategy:
       matrix:
         node-version: [16.x]
